--- a/src/i18n/ro.json
+++ b/src/i18n/ro.json
@@ -1,3 +1,26 @@
 {
-    "error": "Ceva nu a mers cum trebuia"
+    "section":{
+        "about":{
+            "title": "Despre mine",
+            "hello": "Buna :)",
+            "description": "Hei, toata lumea. Ma numesc Radu, programat junior situat in Cluj. Sunt mereu curios sa explorez lucruri noi si sa capat o mai buna intelegere despre lumea tehnologiei cu fiecare proiect inceput si neterminat sau 'Hello, world!' printat pe ecran :). Daca esti curios de mine sau ai vreo idee de startup, nu ezita sa imi lasi un mesaj in sectiunea de contact sau sa-mi verifici <a href='./Resume.pdf'> CV-ul</a>."
+        },
+        "projects":{
+            "title": "Proiecte"
+        },
+        "skills":{
+            "title": "Capacitati"
+        },
+        "experience":{
+            "title": "Experienta",
+            "present": "prezent"
+        },
+        "contact": {
+            "name": "Nume",
+            "email": "Email",
+            "subject": "Subiect",
+            "message": "Mesajul tau",
+            "send": "Trimite"
+        }
+    }
 }
